--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 /src/main/resources/*.json
-
+tokens
 ### STS ###
 .apt_generated
 .classpath
