--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,9 +17,9 @@ spring:
         event:
           merge:
             entity_copy_observer: allow
-  jackson:
-    date-format: yyyy-MM-dd
-    time-zone: Asia/Ho_Chi_Minh
+#  jackson:
+#    date-format: yyyy-MM-dd
+#    time-zone: Asia/Ho_Chi_Minh
 server:
   port: 8088
 
