--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,18 +20,18 @@ services:
       - "9300:9300"
     networks:
       - es-network
-#  kibana:
-#    container_name: kibana
-#    image: kibana:7.17.25
-#    restart: always
-#    environment:
-#      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200    # address of elasticsearch docker container which kibana will connect
-#    ports:
-#      - '5601:5601'
-#    depends_on:
-#      - elasticsearch
-#    networks:
-#      - es-network
+  kibana:
+    container_name: kibana
+    image: kibana:7.17.25
+    restart: always
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200    # address of elasticsearch docker container which kibana will connect
+    ports:
+      - '5601:5601'
+    depends_on:
+      - elasticsearch
+    networks:
+      - es-network
 
 volumes:
   esdata:
